// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic green Lenkelister test 1`] = `
<div
  className="relatert-informasjon"
>
  <nav
    className="relatert-informasjon__links"
  />
</div>
`;

exports[`render Lenkelister without links 1`] = `
<div
  className="relatert-informasjon"
>
  <nav
    className="relatert-informasjon__links"
  />
</div>
`;

exports[`render a couple of links 1`] = `
<div
  className="relatert-informasjon"
>
  <nav
    className="relatert-informasjon__links"
  >
    <div
      className="relatert-informasjon__link-container"
    >
      <p
        className="typo-normal"
      >
        <a
          className="lenke relatert-informasjon__link"
          data-ga="Dittnav/Lenkeliste"
          href="/mininnboks"
        >
          Min innboks
        </a>
      </p>
    </div>
    <div
      className="relatert-informasjon__link-container"
    >
      <p
        className="typo-normal"
      >
        <a
          className="lenke relatert-informasjon__link"
          data-ga="Dittnav/Lenkeliste"
          href="/saksoversikt"
        >
          Innsyn og oversikt
        </a>
      </p>
    </div>
  </nav>
</div>
`;
